Adicionando action show no controller Restaurante

--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -14,6 +14,9 @@
     <td><%= restaurante.nome %></td>
     <td><%= restaurante.endereco %></td>
     <td><%= restaurante.especialidade %></td>
+    <td>
+    	<%= link_to 'Mostrar', action: 'show', id: restaurante %>
+    </td>
   </tr>
 <% end %>
 </table>
