Persistência de restaurante(view edit;new;show)

--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -17,6 +17,16 @@
     <td>
     	<%= link_to 'Mostrar', action: 'show', id: restaurante %>
     </td>
+    <td>
+       <%= link_to 'Deletar', {action: 'destroy', id: restaurante},
+                               {method: "delete"} %>
+    </td>
+    <td>
+        <%= link_to 'Editar', action: 'edit', id: restaurante %>
+    </td>
   </tr>
 <% end %>
+<br/>
+
+<%= link_to 'Novo', action: 'new' %>
 </table>
