--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Exibindo Restaurantes</h1>
+<h1> Exibindo Restaurante</h1>
 <p>
 	<b>Nome: </b>
 	<%= @restaurante.nome %>
@@ -12,3 +12,6 @@
 	<b>Especialidade: </b>
 	<%= @restaurante.especialidade %>
 </p>
+
+<%= link_to 'Editar', action: 'edit', id: @restaurante %>
+<%= link_to 'Voltar', action: 'index' %>
