--- a/app/views/restaurantes/new.html.erb
+++ b/app/views/restaurantes/new.html.erb
@@ -1,5 +1,14 @@
 <h1> Adicionando Restaurante </h1>
 
+<!-- Exibindo mensagem de erro -->
+<% if @restaurante.errors.any? %> 
+	<ul>
+	<% @restaurante.errors.full_messages.each do |msg| %>
+		<li> <%= msg %> </li>
+	<% end %>
+	</ul>
+<% end %>
+
 <%= form_for @restaurante do |f| %>
 	Nome: <%= f.text_field :nome         %> <br/> 
 	Endereço: <%= f.text_field :endereco         %> <br/>
