--- a/app/views/restaurantes/edit.html.erb
+++ b/app/views/restaurantes/edit.html.erb
@@ -1,19 +1,5 @@
 <h1> Editando Restaurante</h1>
 
-<%  if @restaurante.errors.any?  %>
-	<ul>
-	<% @restaurante.errors.full_messages.each do |msg| %>
-		<li><%= msg %></li>	
-	<% end %>
-	</ul>
-<% end %>
-
-<%= form_for @restaurante do |f| %>
-	Nome <%= f.text_field :nome  %> <br/>
-	Endereço <%= f.text_field :endereco  %> <br/>
-	Especialidade <%= f.text_field :especialidade  %> <br/>
-	<%= f.submit %>
-
-<% end %>
+<%= render partial: "form" %>
 
 <%= link_to 'Voltar', action: 'index' %>
