Criar qualificação nova à partir da tela de Cliente ou de Restaurante

--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -10,5 +10,7 @@
   <%= @cliente.idade %>
 </p>
 
-<%= link_to 'Edit', edit_cliente_path(@cliente) %> |
-<%= link_to 'Back', clientes_path %>
+<%= link_to 'Editar', edit_cliente_path(@cliente) %> | 
+<%= link_to 'Voltar', clientes_path %> |
+<%= link_to 'Nova Qualificação', controller: "qualificacoes",
+										action: 'new', cliente: @cliente %>
