--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@qualificacao) do |f| %>
+
   <% if @qualificacao.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@qualificacao.errors.count, "error") %> prohibited this qualificacao from being saved:</h2>
@@ -11,13 +11,27 @@
     </div>
   <% end %>
 
+<%= form_for(@qualificacao) do |f| %>
   <div class="field">
-    <%= f.label :cliente_id %><br>
-    <%= f.number_field :cliente_id %>
+        <% if @qualificacao.cliente %>
+          <% f.hidden_field 'cliente_id' %>
+        <% else %> 
+           <p> 
+          <%= f.label :cliente_id %><br>
+          <%= f.collection_select(:cliente_id, @clientes, :id, :nome, :prompt => true) %>
+          </p>
+        <% end %>
   </div>
   <div class="field">
-    <%= f.label :restaurante_id %><br>
-    <%= f.number_field :restaurante_id %>
+<!--
+      <% if @qualificacao.restaurante %>
+         <% f.hidden_field 'restaurante_id' %> 
+      <% else %>
+      --><p> 
+        <%= f.label :restaurante_id %><br>
+        <%= f.collection_select(:restaurante_id, @restaurantes, :id, :nome, :prompt => true) %>
+     <!-- </p>
+      <% end %> -->      
   </div>
   <div class="field">
     <%= f.label :nota %><br>
