--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -13,5 +13,6 @@
 	<%= @restaurante.especialidade %>
 </p>
 
-<%= link_to 'Editar', action: 'edit', id: @restaurante %>
-<%= link_to 'Voltar', action: 'index' %>
+<%= link_to 'Editar', action: 'edit', id: @restaurante %> |
+<%= link_to 'Voltar', action: 'index' %> |
+<%= link_to 'Qualificar este restaurante', controller: "qualificacoes", action: "new", restaurante: @restaurante %>
