--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -16,8 +16,8 @@
   <tbody>
     <% @qualificacoes.each do |qualificacao| %>
       <tr>
-        <td><%= qualificacao.cliente_id %></td>
-        <td><%= qualificacao.restaurante_id %></td>
+        <td><%= qualificacao.cliente.nome %></td>
+        <td><%= qualificacao.restaurante.nome %></td>
         <td><%= qualificacao.nota %></td>
         <td><%= qualificacao.valor_gasto %></td>
         <td><%= link_to 'Show', qualificacao %></td>
@@ -25,8 +25,11 @@
       </tr>
     <% end %>
   </tbody>
-</table>
 
 <br>
 
-<%= link_to 'New Qualificacao', new_qualificacao_path %>
+<%= link_to 'Nova Qualificação', new_qualificacao_path %>
+
+</table>
+
+
