resolvido o problema com o hidden_field

--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -12,5 +12,4 @@
 
 <%= link_to 'Editar', edit_cliente_path(@cliente) %> | 
 <%= link_to 'Voltar', clientes_path %> |
-<%= link_to 'Nova Qualificação', controller: "qualificacoes",
-										action: 'new', cliente: @cliente %>
+<%= link_to 'Nova Qualificação', controller: "qualificacoes", action: 'new', cliente: @cliente %>
