--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -12,36 +12,35 @@
   <% end %>
 
 <%= form_for(@qualificacao) do |f| %>
-  <div class="field">
-        <% if @qualificacao.cliente %>
-          <% f.hidden_field 'cliente_id' %>
-        <% else %> 
-           <p> 
-          <%= f.label :cliente_id %><br>
-          <%= f.collection_select(:cliente_id, @clientes, :id, :nome, :prompt => true) %>
-          </p>
-        <% end %>
-  </div>
-  <div class="field">
-<!--
-      <% if @qualificacao.restaurante %>
-         <% f.hidden_field 'restaurante_id' %> 
-      <% else %>
-      --><p> 
-        <%= f.label :restaurante_id %><br>
-        <%= f.collection_select(:restaurante_id, @restaurantes, :id, :nome, :prompt => true) %>
-     <!-- </p>
-      <% end %> -->      
-  </div>
-  <div class="field">
-    <%= f.label :nota %><br>
-    <%= f.text_field :nota %>
-  </div>
-  <div class="field">
-    <%= f.label :valor_gasto %><br>
-    <%= f.text_field :valor_gasto %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+      <div class="field">
+            <% if @qualificacao.cliente %>
+              <%= f.hidden_field :cliente_id, value: @qualificacao.cliente.id %>
+              <% else %> 
+               <p> 
+              <%= f.label :cliente_id %><br>
+              <%= f.collection_select(:cliente_id, @clientes, :id, :nome, :prompt => true) %>
+              </p>
+            <% end %>
+      </div>
+      <div class="field">
+            <% if @qualificacao.restaurante %>
+               <%= f.hidden_field 'restaurante_id' %> 
+            <% else %>
+            <p>
+              <%= f.label :restaurante_id %><br>
+              <%= f.collection_select(:restaurante_id, @restaurantes, :id, :nome, :prompt => true) %>
+           </p>
+            <% end %>
+      </div>
+      <div class="field">
+            <%= f.label :nota %><br>
+            <%= f.text_field :nota %>
+      </div>
+      <div class="field">
+            <%= f.label :valor_gasto %><br>
+            <%= f.text_field :valor_gasto %>
+      </div>
+      <div class="actions">
+            <%= f.submit %>
+      </div>
 <% end %>
