--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -13,6 +13,12 @@
 	<%= @restaurante.especialidade %>
 </p>
 
+<b> Nota média:</b>
+	<%= @restaurante.qualificacoes.average(:nota) %> <br/>
+<b> Qualificações:</b>
+	<%= @restaurante.qualificacoes.count %> <br/>
+<b> Preço médio: </b>
+	<%= @restaurante.qualificacoes.average(:valor_gasto) %> <br/> <br/>		
 <%= link_to 'Editar', action: 'edit', id: @restaurante %> |
 <%= link_to 'Voltar', action: 'index' %> |
 <%= link_to 'Qualificar este restaurante', controller: "qualificacoes", action: "new", restaurante: @restaurante %>
