Adicionado os comentarios

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+	<ul>
+		<% %w[clientes qualificacoes restaurantes].each do |controller_name| %>
+			<li>
+				<%= link_to controller_name, controller: controller_name %>
+			</li>
+		<% end %>	
+	</ul>	
+
 <%= yield %>
 
 </body>
