--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -22,3 +22,6 @@
 <%= link_to 'Editar', action: 'edit', id: @restaurante %> |
 <%= link_to 'Voltar', action: 'index' %> |
 <%= link_to 'Qualificar este restaurante', controller: "qualificacoes", action: "new", restaurante: @restaurante %>
+
+<%= comentarios @restaurante %>
+<%= novo_comentario @restaurante %>
