--- a/app/views/comentarios/_comentarios.html.erb
+++ b/app/views/comentarios/_comentarios.html.erb
@@ -5,6 +5,8 @@
 	<% else %>
 		<%= render comentarios %>
 	<% end %> 	
-
-
 </div>
+
+<% content_for :css do %>
+	<link rel="stylesheet" href="/stylesheets/comentarios.css">
+<% end %>
