--- a/app/views/comentarios/_comentario.html.erb
+++ b/app/views/comentarios/_comentario.html.erb
@@ -1,11 +1,13 @@
 <p id="comentario_<%= comentario.id %>">
    <%= comentario.conteudo %> -
-   <%= link_to  '(remover)', comentario, method: :delete,
-   				remote: true,
-   				id: "remover_comentario_#{comentario.id}" %>
+   <%= link_to  '(remover)', comentario, method: :delete, remote: true, id: "remover_comentario_#{comentario.id}" %>
 </p>
 
 <% content_for :js do %>
-
-
+ $('#remover_comentario_<%= comentario.id %>').bind('ajax:success',
+ 		function(){
+ 			$('#comentario_<%=comentario.id%>').remove();
+ 			console.log("Deletou!!!!!!!!!!");
+ 		}
+ 	);
 <% end %>	
