--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,9 @@
 	<%= menu_principal %w(restaurantes clientes qualificacoes)	 %>
 <%= yield %>
 
+
+<script>
+	<%= yield :js %>
+</script>
 </body>
 </html>
