--- a/app/views/comentarios/_novo_comentario.html.erb
+++ b/app/views/comentarios/_novo_comentario.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for Comentario.new do |f| %>
+<%= form_for Comentario.new, remote: true do |f| %>
 	<%= f.hidden_field :comentavel_id     ,value: comentavel.id   %>
 	<%= f.hidden_field :comentavel_type     ,value: comentavel.class   %>
 
@@ -7,4 +7,12 @@
 	<%= f.text_area :conteudo %>
 
 	<%= f.submit %>
+<% end %>
+
+<% content_for :js do %>
+	$('form').bind('ajax:complete', 
+	function(xhr, result){
+    	$('#comentarios').replaceWith(result.responseText);
+    	$('textarea').val("");
+  });
 <% end %>
