--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -20,8 +20,8 @@
         <td><%= qualificacao.restaurante.nome %></td>
         <td><%= qualificacao.nota %></td>
         <td><%= valor_formatado(qualificacao.valor_gasto) %></td>
-        <td><%= link_to 'Show', qualificacao %></td>
-        <td><%= link_to 'Edit', edit_qualificacao_path(qualificacao) %></td>
+        <td><%= link_to 'Mostrar', qualificacao %></td>
+        <td><%= link_to 'Editar', edit_qualificacao_path(qualificacao) %></td>
       </tr>
     <% end %>
   </tbody>
