--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
 	<b>Foto:</b>
-	<%= image_tag @restaurante.foto.url(:original) %>
+	<%= image_tag @restaurante.foto.url(:medium) %>
 </p>
 <p>
 	<b>Nome: </b>
