consegui criar paginal inicial, agora falta o bootstrapp

--- a/app/views/layouts/_menu_principal.html.erb
+++ b/app/views/layouts/_menu_principal.html.erb
@@ -1,5 +1,5 @@
 <ul>
-	<li> <%= link_to 'Home', controller: 'application' %> </li>
+  <li> <%= link_to 'Home', controller: 'pages' %> </li> 
   <% opcoes.each do | controller_name | %>
 	<li>
 		<%= link_to controller_name, controller: controller_name %>
