--- a/app/views/layouts/_menu_principal.html.erb
+++ b/app/views/layouts/_menu_principal.html.erb
@@ -1,8 +1,10 @@
-<ul>
-  <li> <%= link_to 'Home', controller: 'pages' %> </li> 
-  <% opcoes.each do | controller_name | %>
-	<li>
-		<%= link_to controller_name, controller: controller_name %>
-	</li>
-  <% end %>	
-</ul>
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav">
+		  <li> <%= link_to 'Home', controller: 'pages' %> </li> 
+		  <% opcoes.each do | controller_name | %>
+			<li>
+				<%= link_to controller_name.slice(0,1).capitalize + controller_name.slice(1..-1), controller: controller_name %>
+			</li>
+		  <% end %>	
+		</ul>
+</div>
