alterado layout do menu

--- a/app/views/layouts/_menu_principal.html.erb
+++ b/app/views/layouts/_menu_principal.html.erb
@@ -1,5 +1,4 @@
- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		<ul class="nav navbar-nav">
+		<ul class="nav navbar-nav navbar-left">
 		  <li> <%= link_to 'Home', controller: 'pages' %> </li> 
 		  <% opcoes.each do | controller_name | %>
 			<li>
@@ -7,4 +6,3 @@
 			</li>
 		  <% end %>	
 		</ul>
-</div>
