--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,4 @@
-<h1> Sistema de avaliação de restaurantes</h1>
+<div class="jumbotron">
+	<h1> Vota Prato</h1>
+	<p>Sistema de avaliação de restaurantes</p>
+</div>
