--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Listagem de Restaurantes</h1>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>ID</th>
     <th>Nome</th>
     <th>Endereço</th>
     <th>Especialidade</th>
+    <th colspan="3"></th>
   </tr>
 
 <% @restaurantes.each do |restaurante| %>
