--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= yield :css %>
 </head>
 <body>
-	<%= menu_principal %w(restaurantes clientes qualificacoes)	 %>
+	<%= menu_principal %w(restaurantes clientes qualificacoes pratos)	 %>
 
 	<div class="container">
 		
