--- a/app/views/pratos/index.html.erb
+++ b/app/views/pratos/index.html.erb
@@ -6,19 +6,23 @@
     <tr>
       <th>Nome</th>
       <th>Descrição</th>
-      <th>Restaurante</th>
+      <th>Foto</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @pratos.each do |pratos| %>
+    <% @pratos.each do |p| %>
       <tr>
-        <td><%= pratos.nome %></td>
-        <td><%= pratos.descricao %></td>
+        <td><%= p.nome %></td>
+        <td><%= p.descricao %></td>
+        <td><%= image_tag p.foto.url(:thumb) %></td>
+        <td><%= link_to "Receita", controller: "receitas", action: "show", prato: p %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+
+ 
