--- a/app/views/pratos/index.html.erb
+++ b/app/views/pratos/index.html.erb
@@ -1,12 +1,12 @@
 
-<h1> Lista de pratos</h1>
+<h1> Pratos</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Nome</th>
       <th>Descrição</th>
-      <th>Foto</th>
+      <!-- <th>Foto</th> -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,13 +16,14 @@
       <tr>
         <td><%= p.nome %></td>
         <td><%= p.descricao %></td>
-        <td><%= image_tag p.foto.url(:thumb) %></td>
+        <!--<td><%= image_tag p.foto.url(:thumb) %></td> -->
         <td><%= link_to "Receita", controller: "receitas", action: "show", prato: p %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
+<%= link_to "Novo", controller: "pratos", action: "new" %>
 <br>
 
  
