Criando o formulário NEW do recurso Prato

--- a/app/views/restaurantes/_form.html.erb
+++ b/app/views/restaurantes/_form.html.erb
@@ -16,5 +16,5 @@
 	Endereço: <%= f.text_field :endereco %> <br/>
 	Especialidade: <%= f.text_field :especialidade %> <br/> 
 	<%= f.file_field :foto %>
-	<%= f.submit %>
+	<%= f.submit "Salvar" %>
 <% end %>
