--- a/app/views/pratos/new.html.erb
+++ b/app/views/pratos/new.html.erb
@@ -15,9 +15,9 @@
 	</div>
 	 </br> -->
 
-<div class="form-group">
+  <div class="form-group">
     <%= f.label :nome %>
-    <%=f.text_field :nome , class: "form-control", placeholder: "nome do prato"%> 	
+    <%=f.text_field :nome , class: "form-control", placeholder: "nome do prato"%>
   </div>
   <div class="form-group">
     <%= f.label :descrição %>
@@ -27,9 +27,13 @@
     <%= f.label "Imagem do Prato" %>
     <%= f.file_field :foto %>
     <p class="help-block">Example block-level help text here.</p>
-    
+
   </div>
   
+  <div class="form-group">
+    <%= f.label "Receita" %>
+    <%=f.text_field :nome , class: "form-control", placeholder: "nome do prato"%>
+  </div>
   
   <%= f.submit "Salvar", class: "btn btn-default" %>
 
