--- a/app/views/pratos/new.html.erb
+++ b/app/views/pratos/new.html.erb
@@ -1,20 +1,15 @@
-<%= form_for @prato , html: {multipart: true} do |f| %>
-	<!--<div class="form-group">
-		<%= f.label :nome %>
-		
-		<div class ="col-xs-4">
-		<%=f.text_field :nome , class: "form-control", placeholder: "nome do prato"%> 	
-		</div>
-	</div>
-	
-	<div class="form-group">
-		<%= f.label :descrição %>
-		<div class ="col-xs-4">
-			<%= f.text_field :descricao , class: "form-control", placeholder: "descrição" %></br>
-		</div>
-	</div>
-	 </br> -->
+<% if @prato.errors.any? %> 
+<div id="error_explanation">
+	<ul>
+	<% @prato.errors.full_messages.each do |msg| %>
+		<li><%= msg %></li>	
+	<% end %>
+	</ul>
+</div>	
+<% end %>
 
+
+<%= form_for @prato , html: {multipart: true} do |f| %>	
   <div class="form-group">
     <%= f.label :nome %>
     <%=f.text_field :nome , class: "form-control", placeholder: "nome do prato"%>
@@ -27,19 +22,8 @@
     <%= f.label "Imagem do Prato" %>
     <%= f.file_field :foto %>
     <p class="help-block">Example block-level help text here.</p>
-
-  </div>
-  
-  <div class="form-group">
-
-  <%= f.fields_for :receita do |r| %>
-    <%= r.label "Receita" %>
-    <%= r.text_area :conteudo , class: "form-control", placeholder: "ingredientes - modo de preparo", size: "100x20"%>
-   <% end %> 
-  </div>
-  
-  <%= f.submit "Salvar", class: "btn btn-default" %>
-
-
-
+  </div>  
+  <div class= "actions">
+    <%= f.submit "Salvar" %> 
+  </div> 
 <% end %>
