--- a/app/views/layouts/_menu_principal.html.erb
+++ b/app/views/layouts/_menu_principal.html.erb
@@ -1,18 +1,15 @@
 <nav class="navbar navbar-inverse">		
 	<div class="container">
 		<div class="navbar-header">
-      		<%= link_to 'Home', root_path, class: 'navbar-brand' %>
-    	</div>
-			<div id="navbar">
-
-				<ul class="nav navbar-nav navbar-left">
-				  <% opcoes.each do | controller_name | %>
-					<li>
-						<%= link_to controller_name.capitalize, controller: controller_name %>
-					</li>
-				  <% end %>	
-				</ul>
-				
+      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+    </div>
+    <div id="navbar">
+      <ul class="nav navbar-nav navbar-left">
+        <li><%= link_to "Restaurantes", restaurantes_path %>	</li>
+        <li> <%= link_to "Clientes", clientes_path %></li>
+        <li><%= link_to "Qualificações", qualificacoes_path %></li>
+        <li><%= link_to "Pratos", pratos_path %></li>
+      </ul>	
 			</div>
 	</div>
 </nav>
