--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,12 @@
   <%= yield :css %>
 </head>
 <body>
-	<%= menu_principal %w(restaurantes clientes qualificacoes pratos)	 %>
 
-	<div class="container">
-		
-		
-			<%= yield %>
-		
-	</div>
+<%= render "layouts/menu_principal" %>
+<div class="container">
+  <%= yield %>	
+</div>
+
 <script>
 	<%= yield :js %>
 </script>
