--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
 	<h1> Vota Prato</h1>
-	<p>Sistema de avaliação de restaurantes</p>
+	<p>Sistema de avaliação de restaurante.</p>
 </div>
