--- a/app/views/qualificacoes/index.html.erb
+++ b/app/views/qualificacoes/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Lista de  Qualificacões</h1>
+<h1>Lista de  Qualificações</h1>
 
 <table class="table table-striped">
   <thead>
