Terminada a tela de edição de pratos e receitas

--- a/app/views/pratos/index.html.erb
+++ b/app/views/pratos/index.html.erb
@@ -17,11 +17,14 @@
         <td><%= p.nome %></td>
         <td><%= p.descricao %></td>
         <!--<td><%= image_tag p.foto.url(:thumb) %></td> -->
-        <% if p.receita.blank? %>
+                <% if p.receita.blank? %>
           <td><%= link_to "Adicionar receita", controller: "receitas", action: "new", prato_id: p %></td>
        <% else  %>
           <td><%= link_to "Ver Receita", controller: "receitas", action: "show", id: p.receita %></td> 
-       <% end %>
+        <% end %>
+        <td><%= link_to "Editar", controller: "pratos", action: "edit", id: p %></td>
+        <td><%= link_to "Excluir", "#" %></td>
+
       </tr>
     <% end %>
   </tbody>
