--- a/app/views/pratos/new.html.erb
+++ b/app/views/pratos/new.html.erb
@@ -9,21 +9,6 @@
 <% end %>
 
 
-<%= form_for @prato , html: {multipart: true} do |f| %>	
-  <div class="form-group">
-    <%= f.label :nome %>
-    <%=f.text_field :nome , class: "form-control", placeholder: "nome do prato"%>
-  </div>
-  <div class="form-group">
-    <%= f.label :descrição %>
-    <%= f.text_field :descricao , class: "form-control", placeholder: "descrição" %>
-  </div>
-  <div class="form-group">
-    <%= f.label "Imagem do Prato" %>
-    <%= f.file_field :foto %>
-    <p class="help-block">Example block-level help text here.</p>
-  </div>  
-  <div class= "actions">
-    <%= f.submit "Salvar" %> 
-  </div> 
-<% end %>
+<%= render "form %>
+
+<%= link_to "Voltar", pratos_path %>
