--- a/app/views/pratos/new.html.erb
+++ b/app/views/pratos/new.html.erb
@@ -1,14 +1,3 @@
-<% if @prato.errors.any? %> 
-<div id="error_explanation">
-	<ul>
-	<% @prato.errors.full_messages.each do |msg| %>
-		<li><%= msg %></li>	
-	<% end %>
-	</ul>
-</div>	
-<% end %>
-
-
-<%= render "form %>
+<%= render "form" %>
 
 <%= link_to "Voltar", pratos_path %>
