--- a/app/views/pratos/_form.html.erb
+++ b/app/views/pratos/_form.html.erb
@@ -1,3 +1,5 @@
+<%= exibe_erros(@prato) %>
+
 <%= form_for @prato , html: {multipart: true} do |f| %>	
   <div class="form-group">
     <%= f.label :nome %>
