--- a/app/views/qualificacoes/_form.html.erb
+++ b/app/views/qualificacoes/_form.html.erb
@@ -1,15 +1,4 @@
-
-  <% if @qualificacao.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@qualificacao.errors.count, "error") %> prohibited this qualificacao from being saved:</h2>
-
-      <ul>
-      <% @qualificacao.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= exibe_erros(@qualificacao) %>
 
 <%= form_for(@qualificacao) do |f| %>
       <div class="field">
