--- a/app/views/restaurantes/_form.html.erb
+++ b/app/views/restaurantes/_form.html.erb
@@ -1,15 +1,4 @@
-
-
-
-<% if @restaurante.errors.any? %> 
-<div id="error_explanation">
-	<ul>
-	<% @restaurante.errors.full_messages.each do |msg| %>
-		<li><%= msg %></li>	
-	<% end %>
-	</ul>
-</div>	
-<% end %>
+<%= exibe_erros(@restaurante) %>
 
 <%= form_for @restaurante, html: {multipart: true} do |f| %>
 	Nome: <%= f.text_field :nome %> <br/>
