Começando o teste do controller Especialidade

--- a/app/views/especialidades/index.html.erb
+++ b/app/views/especialidades/index.html.erb
@@ -1,12 +1,15 @@
 <h1>Especialidades</h1>
 
-<table class="table table-stripped">
+<table class="table table-striped">
   <tr>
     <th>Nome</th>
+    <th colspan="2"></th>
   </tr> 
   <% @especialidades.each do |e| %> 
     <tr>
-      <td>e.nome</td>
+      <td><%= e.nome %></td>
+      <td><%= link_to "Editar", edit_especialidade_path(:id) %></td>
+      <td><%= link_to "Excluir", especialidade_path(id: e), method: :delete %></td>
     </tr>
   <% end  %>
 </table>
