Acertando o dropdownlist de especialidade

--- a/app/views/layouts/_menu_principal.html.erb
+++ b/app/views/layouts/_menu_principal.html.erb
@@ -6,6 +6,7 @@
     <div id="navbar">
       <ul class="nav navbar-nav navbar-left">
         <li><%= link_to "Restaurantes", restaurantes_path %>	</li>
+        <li><%= link_to "Especialidades", especialidades_path %></li>
         <li> <%= link_to "Clientes", clientes_path %></li>
         <li><%= link_to "Qualificações", qualificacoes_path %></li>
         <li><%= link_to "Pratos", pratos_path %></li>
