--- a/app/views/restaurantes/index.html.erb
+++ b/app/views/restaurantes/index.html.erb
@@ -1,20 +1,15 @@
-<h1>Listagem de Restaurantes</h1>
+<h1>Restaurantes</h1>
 
 <table class="table table-striped">
   <tr>
-    <th>ID</th>
     <th>Nome</th>
-    <th>Endereço</th>
-    <th>Especialidade</th>
     <th colspan="3"></th>
   </tr>
 
 <% @restaurantes.each do |restaurante| %>
   <tr>
-    <td><%= restaurante.id %></td>
     <td><%= restaurante.nome %></td>
-    <td><%= restaurante.endereco %></td>
-    <td><%= restaurante.especialidade %></td>
+   
     <td>
     	<%= link_to 'Mostrar', action: 'show', id: restaurante %>
     </td>
