Removendo opção de qualificações; Não deixar excluir especialidade que tenha restaurante

--- a/app/views/restaurantes/show.html.erb
+++ b/app/views/restaurantes/show.html.erb
@@ -16,15 +16,8 @@
 <% end %>
 	</p>
 
-<b> Nota média:</b>
-	<%= @restaurante.qualificacoes.average(:nota) %> <br/>
-<b> Qualificações:</b>
-	<%= @restaurante.qualificacoes.count %> <br/>
-<b> Preço médio: </b>
-	<%= valor_formatado(@restaurante.qualificacoes.average(:valor_gasto)) %> <br/> <br/>		
 <%= link_to 'Editar', action: 'edit', id: @restaurante %> |
-<%= link_to 'Voltar', action: 'index' %> |
-<%= link_to 'Qualificar este restaurante', controller: "qualificacoes", action: "new", restaurante: @restaurante %>
+<%= link_to 'Voltar', action: 'index' %> 
 
 <!-- %=# comentarios @restaurante %>
 #%= #novo_comentario @restaurante %> -->
